...
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pick-Up Menu</string>
    <string name="nav_header_subtitle">Search for items that suit your needs</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_show_all_title">Show All</string>
    <string name="nav_filter_title">Filter</string>
    <string name="nav_food_title">Food</string>
    <string name="nav_study_material_title">Study Material</string>
    <string name="nav_furniture_title">Households</string>
    <string name="nav_lost_and_found_title">Lost &amp; Found</string>
    <string name="nav_hitchhike_title">Hitchhiking</string>
    <string name="nav_other">Other</string>
...
    <string name="nav_manage_favorites">Manage Favorites</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_user_settings">User Settings</string>

    <!--Taker activity AppBar elements-->
    <string name="title_activity_taker_menu">TakeCare</string>
    <string name="action_switch_to_map">Map Display</string>
    <string name="action_switch_to_list">List Display</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_chat">Chat</string>
    <string name="action_user_settings">User Settings</string>
    <string name="action_my_items">My Items</string>
    <string name="action_requested_items">Requested Items</string>
    <string name="action_favorites">Favorites</string>

...
    <string name="my_taken_items_empty_feed_text">None of your items were given to someone</string>
    <string name="my_expired_items_empty_feed_text">None of your items have expired</string>


    <!-- Favorites page elements -->
    <string name="favorites_tags_title">Tags:</string>
    <string name="favorites_tag_hint">e.g. "muffins", "giveaway", "music"…</string>
    <string name="favorites_instruction_text">Type in words that interest you.\nWe\'ll make sure to notify you when a suitable item is posted!</string>
    <string name="favorites_save_changes">Save Changes</string>
    <string name="favorites_help_popup_text">3\-15 characters long.\nSeparate by comma or enter.\nNo duplicates allowed</string>
    <string name="unsaved_tags_title">Unsaved Keywords</string>
    <string name="unsaved_tags_body">Are you sure you don\'t want to save your keywords?</string>
    <string name="loading_keywords">Loading your keywords…</string>
...
    <string name="flexible">Flexible</string>
    <string name="no_description">No description provided.</string>
    <string name="requests_list_text">Requested By:</string>
    <string name="item_description_title_ext">Description</string>
    <string name="item_default_pickup_text">Flexible</string>
    <string name="item_default_location_text">Unspecified</string>
    <string name="search_button_description">Press to search</string>
    <string name="item_info_published_at">Published at:</string>
    <string name="item_info_expires_at">Expires at:</string>
    <string name="delete_post_title">Delete Post</string>
    <string name="delete_post_body">Are you sure you want to delete this post?</string>
    <string name="post_deleted_toast">Item successfully deleted!</string>
    <string name="item_requested_toast">You\'ve successfully requested the item!</string>
...
