<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change_display"
        android:icon="@drawable/ic_map_display"
        android:title="@string/action_switch_to_map"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom"/>
</menu>
